--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <title>Document</title>
     </head>
     <body>
-       
-        <script src="js/script.js"></script>
-        <script src="js/main.js"></script>
+        <script src="js/second.js"></script>
+        <!-- <script src="js/script.js"></script> -->
+        <!-- <script src="js/main.js"></script> -->
     </body>
 </html>
